2008-08-06  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/Makefile.am: 
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-index-manager.c:
	* src/trackerd/tracker-index-manager.h: Moved index manager to the
	libtracker-db. 

2008-08-06  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-dbus.[ch]:
	* src/trackerd/tracker-index-manager.[ch]:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-processor.c: 
	* src/trackerd/tracker-search.[ch]: Removed the email index since
	it is unused now.

2008-08-06  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c: Index IMAP attachments.

2008-08-06  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-index.c: Using g_param_spec_boolean to set
	a boolean parameter.
	* tests/trackerd/tracker-index-test.c: Updated test.
	
2008-08-06  Ivan Frade  <ivan.frade@nokia.com>

	* data/services/default.service: Set HasMetadata to False in
	Folder category. It is not necessary to call tracker-extractor
	for folders.

2008-08-06  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-index-manager.c
	(tracker_index_manager_init): Dont force reindex if one file is
	missing. It was removing file-index.db every time we started
	trackerd.
	
2008-08-06  Martyn Russell  <martyn@imendio.com>

	* AUTHORS: Sorted the AUTHORS file alphabetically and added Me,
	Carlos, Ivan, Mikael and Phillip.

2008-08-05  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-module.h
	(tracker_module_file_get_service_type):
	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_file_get_service_type): Modify to receive a
	TrackerFile.
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/modules/dummy.c:
	* src/tracker-indexer/modules/files.c: Adapt to this change.
	* src/tracker-indexer/modules/evolution.c: Implement this method to
	get the correct service type for attachments.

2008-08-05  Ivan Frade  <ivan.frade@nokia.com>
