@@ -1,7 +1,28 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/*
+ * Copyright (C) 2008, Nokia
+
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+ * Boston, MA  02110-1301, USA.
+ */
+
 #include "tracker-index-item.h"
 
 guint32 
-tracker_index_item_calc_amalgamated (gint service_type, gint score)
+tracker_index_item_calc_amalgamated (gint service_type, 
+                                     gint score)
 {
 	unsigned char a[4];
 	gint16        score16;
@@ -33,7 +54,6 @@ tracker_index_item_get_service_type (TrackerIndexItem *details)
 
 	return (details->amalgamated >> 24) & 0xFF;
 }
-
 
 gint16  
 tracker_index_item_get_score (TrackerIndexItem *details)
